deleted footer, added publications page and teaching page

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,28 +1,168 @@
 ---
 ---
-
 @string{aps = {American Physical Society,}}
+
+
+@article{drivasginsberg23,
+bibtex_show={true},
+  title={Islands in stable fluid equilibria},
+  author={Drivas, Theodore D. and Ginsberg, Daniel},
+  year={2023},
+  publisher={},
+	arxiv={2305.11150},
+}
+
+
+@article{drivasginsberggrayer,
+bibtex_show={true},
+  title={On the distribution of heat in fibered magnetic fields},
+  author={Drivas, Theodore D. and Ginsberg, Daniel and Hezekiah Grayer II},
+  year={2022},
+  publisher={},
+	arxiv={2210.09968},
+}
+
+
+
+@article{ginsberg2021breakdown,
+bibtex_show={true},
+  title={On the breakdown of solutions to the incompressible Euler equations with free surface boundary},
+  author={Ginsberg, Daniel},
+  journal={SIAM Journal on Mathematical Analysis},
+  volume={53},
+  number={3},
+  pages={3366--3384},
+  year={2021},
+  publisher={Society for Industrial and Applied Mathematics},
+	arxiv={1811.06154},
+	html={https://epubs.siam.org/doi/10.1137/20M1360384}
+}
+
+@article{ginsberg2018lifespan,
+bibtex_show={true},
+  title={On the lifespan of three-dimensional gravity water waves with vorticity},
+  author={Ginsberg, Daniel},
+  journal={Preprint},
+  year={2018},
+	arxiv={1812.01583}
+}
+
+@article{ginsberg2019priori,
+bibtex_show={true},
+  title={A priori estimates for a relativistic liquid with free surface boundary},
+  author={Ginsberg, Daniel},
+  journal={Journal of Hyperbolic Differential Equations},
+  volume={16},
+  number={03},
+  pages={401--442},
+  year={2019},
+  publisher={World Scientific Publishing Company},
+	html={https://www.worldscientific.com/doi/abs/10.1142/S0219891619500152},
+	arxiv={1811.06915}
+}
+
+@article{ginsberg2020local,
+bibtex_show={true},
+  title={Local well-posedness for the motion of a compressible, self-gravitating liquid with free surface boundary},
+  author={Ginsberg, Daniel and Lindblad, Hans and Luo, Chenyun},
+  journal={Archive for Rational Mechanics and Analysis},
+  volume={236},
+  number={2},
+  pages={603--733},
+  year={2020},
+  publisher={Springer Berlin Heidelberg},
+	arxiv={1902.08600},
+	html={https://link.springer.com/article/10.1007/s00205-019-01477-3}
+}
+
+
+@article{constantin2021flexibility,
+bibtex_show={true},
+  title={Flexibility and rigidity in steady fluid motion},
+  author={Constantin, Peter and Drivas, Theodore D and Ginsberg, Daniel},
+  journal={Communications in Mathematical Physics},
+  volume={385},
+  number={1},
+  pages={521--563},
+  year={2021},
+  publisher={Springer Berlin Heidelberg},
+	html={https://link.springer.com/article/10.1007/s00220-021-04048-4},
+	arxiv={2007.09103}
+}
+
+@article{constantin2021quasisymmetric,
+bibtex_show={true},
+  title={On quasisymmetric plasma equilibria sustained by small force},
+  author={Constantin, Peter and Drivas, Theodore D and Ginsberg, Daniel},
+  journal={Journal of Plasma Physics},
+  volume={87},
+  number={1},
+  year={2021},
+  publisher={Cambridge University Press},
+	html={https://www.cambridge.org/core/journals/journal-of-plasma-physics/article/on-quasisymmetric-plasma-equilibria-sustained-by-small-force/AAB0DCC82FDBD028AE1F26841E583CA1},
+	arxiv={2009.08860}
+}
+
+
+@article{ginsberg2011analytical,
+bibtex_show={true},
+  title={Analytical and numerical results on the positivity of steady state solutions of a thin film equation},
+  author={Ginsberg, Daniel and Simpson, Gideon},
+  journal={arXiv preprint arXiv:1101.3261},
+  year={2011},
+	arxiv={}
+}
+
+
+
+@article{constantin2022flexibility,
+bibtex_show={true},
+  title={Flexibility and rigidity of free boundary MHD equilibria},
+  author={Constantin, Peter and Drivas, Theodore D and Ginsberg, Daniel},
+  journal={Nonlinearity},
+  volume={35},
+  number={5},
+  pages={2363},
+  year={2022},
+  publisher={IOP Publishing},
+	html={https://iopscience.iop.org/article/10.1088/1361-6544/ac5d6a},
+	arxiv={2108.05977}
+}
+
+@article{ginsberg2021local,
+bibtex_show={true},
+  title={On the local well-posedness for the relativistic Euler equations for a liquid body},
+  author={Ginsberg, Daniel and Lindblad, Hans},
+  journal={To appear, Annals of PDE. Preprint, },
+  year={2021},
+	archivePrefix = {arXiv},
+ arxiv={2109.01899}
+}
+
+
 
 @book{einstein1956investigations,
   bibtex_show={true},
   title={Investigations on the Theory of the Brownian Movement},
   author={Einstein, Albert},
   year={1956},
-  publisher={Courier Corporation},
+  publisher={Courier Corporation,},
   preview={brownian-motion.gif}
 }
+
+
 
 @article{einstein1950meaning,
   abbr={AJP},
   bibtex_show={true},
   title={The meaning of relativity},
   author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
+  journal={American Journal of Physics,},
   volume={18},
   number={6},
   pages={403--404},
   year={1950},
-  publisher={American Association of Physics Teachers}
+  publisher={American Association of Physics Teachers,}
 }
 
 @article{PhysRev.47.777,
@@ -30,7 +170,7 @@
   title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
   author={Einstein, A. and Podolsky, B. and Rosen, N.},
   abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
+  journal={Phys. Rev.,},
   volume={47},
   issue={10},
   pages={777--780},
@@ -42,15 +182,13 @@
   url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
   html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
   pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
   selected={true}
 }
 
 @article{einstein1905molekularkinetischen,
   title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
   author={Einstein, A.},
-  journal={Annalen der physik},
+  journal={Annalen der physik,},
   volume={322},
   number={8},
   pages={549--560},
@@ -62,7 +200,7 @@
   abbr={Ann. Phys.},
   title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
   author={Einstein, A.},
-  journal={Ann. Phys.},
+  journal={Ann. Phys.,},
   volume={17},
   pages={549--560},
   year={1905}
