updated teaching and bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,7 +18,7 @@ bibtex_show={true},
   title={On the distribution of heat in fibered magnetic fields},
   author={Drivas, Theodore D. and Ginsberg, Daniel and Hezekiah Grayer II},
   year={2022},
-  publisher={},
+  publisher={To appear, Communications in Mathematical Physics},
 	arxiv={2210.09968},
 }
 
@@ -133,7 +133,7 @@ bibtex_show={true},
 bibtex_show={true},
   title={On the local well-posedness for the relativistic Euler equations for a liquid body},
   author={Ginsberg, Daniel and Lindblad, Hans},
-  journal={To appear, Annals of PDE. Preprint, },
+  journal={To appear, Annals of PDE.},
   year={2021},
 	archivePrefix = {arXiv},
  arxiv={2109.01899}
