--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,10 +17,22 @@ bibtex_show={true},
 bibtex_show={true},
   title={On the distribution of heat in fibered magnetic fields},
   author={Drivas, Theodore D. and Ginsberg, Daniel and Hezekiah Grayer II},
-  year={2022},
   journal={To appear, Communications in Mathematical Physics},
+  year={2022},
+    arxivPrefix = {arXiv},
 	arxiv={2210.09968},
 }
+
+@article{ginsberg2021local,
+bibtex_show={true},
+  title={On the local well-posedness for the relativistic Euler equations for a liquid body},
+  author={Ginsberg, Daniel and Lindblad, Hans},
+  journal={To appear, Annals of PDE},
+  year={2021},
+	archivePrefix = {arXiv},
+ arxiv={2109.01899}
+}
+
 
 
 
@@ -127,16 +139,6 @@ bibtex_show={true},
   publisher={IOP Publishing},
 	html={https://iopscience.iop.org/article/10.1088/1361-6544/ac5d6a},
 	arxiv={2108.05977}
-}
-
-@article{ginsberg2021local,
-bibtex_show={true},
-  title={On the local well-posedness for the relativistic Euler equations for a liquid body},
-  author={Ginsberg, Daniel and Lindblad, Hans},
-  journal={To appear, Annals of PDE},
-  year={2021},
-	archivePrefix = {arXiv},
- arxiv={2109.01899}
 }
 
 
