--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,14 @@
 ---
 @string{aps = {American Physical Society,}}
 
+  @article{ginsbergpusateri24
+  bibtex_show={true},
+  title={Long time regularity for 3d gravity waves with vorticity},
+  author={Ginsberg, Daniel and Pusateri, Fabio},
+  year={2024},
+  publisher={},
+    arxiv={.}
+}
 
 @article{drivasginsberg23,
 bibtex_show={true},
