--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 @string{aps = {American Physical Society,}}
 
-  @article{ginsbergpusateri24
+  @article{ginsbergpusateri24,
   bibtex_show={true},
   title={Long time regularity for 3d gravity waves with vorticity},
   author={Ginsberg, Daniel and Pusateri, Fabio},
