--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -31,14 +31,17 @@ bibtex_show={true},
 	arxiv={2210.09968},
 }
 
-@article{ginsberg2021local,
+@article{ginsberg2023local,
 bibtex_show={true},
   title={On the local well-posedness for the relativistic Euler equations for a liquid body},
   author={Ginsberg, Daniel and Lindblad, Hans},
-  journal={To appear, Annals of PDE},
-  year={2021},
+  journal={Annals of PDE},
+  volume={9},
+  number={23},
+  year={2023},
 	archivePrefix = {arXiv},
- arxiv={2109.01899}
+ arxiv={2109.01899},
+ html={https://link.springer.com/article/10.1007/s40818-023-00164-7}
 }
 
 
