--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
   title={Long time regularity for 3d gravity waves with vorticity},
   author={Ginsberg, Daniel and Pusateri, Fabio},
   year={2024},
-  publisher={Preprint},
+  journal={Preprint},
     arxiv={.}
 }
 
@@ -16,7 +16,7 @@ bibtex_show={true},
   title={Islands in stable fluid equilibria},
   author={Drivas, Theodore D. and Ginsberg, Daniel},
   year={2023},
-  publisher={Preprint},
+  journal={Preprint},
 	arxiv={2305.11150},
 }
 
