added paper with fabio

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,7 @@
   author={Ginsberg, Daniel and Pusateri, Fabio},
   year={2024},
   journal={Preprint},
-    arxiv={.}
+    arxiv={2401.10096}
 }
 
 @article{drivasginsberg23,
