--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,15 @@
 ---
 @string{aps = {American Physical Society,}}
 
+
+@article{ginsbergrodnianski24,
+  bibtex_show={true},
+  title={The stability of irrotational shocks and the Landau law of decay}
+  author={Ginsberg, Daniel and Rodnianski, Igor},
+  year={2024},
+  journal={Preprint},
+  arix={2403.13568}
+
   @article{ginsbergpusateri24,
   bibtex_show={true},
   title={Long time regularity for 3d gravity waves with vorticity},
