--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,7 @@
   author={Ginsberg, Daniel and Rodnianski, Igor},
   year={2024},
   journal={Preprint},
-  arxiv={2403.13568}
+  arxiv={2403.13568},
 }
 
 
