--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -27,7 +27,8 @@ bibtex_show={true},
   title={Islands in stable fluid equilibria},
   author={Drivas, Theodore D. and Ginsberg, Daniel},
   year={2023},
-  journal={Preprint},
+  journal={To appear, Proceedings of the AMS},
+  arixPrefix = {arXiv},
 	arxiv={2305.11150},
 }
 
