added paper to papers section

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,14 @@
 ---
 @string{aps = {American Physical Society,}}
 
+@article{abeginsbergjeong24,
+  bibtex_show={true},
+  title={Stationary self-similar profiles for the two-dimensional inviscid Boussinesq equations},
+  author={Abe, Ken and Ginsberg, Daniel and Jeong, In-Jee},
+  year={2024},
+  journal={Preprint},
+  arxiv={2410.21765},
+}
 
 @article{ginsbergrodnianski24,
   bibtex_show={true},
@@ -13,7 +21,7 @@
 }
 
 
-  @article{ginsbergpusateri24,
+@article{ginsbergpusateri24,
   bibtex_show={true},
   title={Long time regularity for 3d gravity waves with vorticity},
   author={Ginsberg, Daniel and Pusateri, Fabio},
