--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -34,8 +34,10 @@
 bibtex_show={true},
   title={Islands in stable fluid equilibria},
   author={Drivas, Theodore D. and Ginsberg, Daniel},
-  year={2023},
-  journal={To appear, Proceedings of the AMS},
+  year={2024},
+  journal={Proceedings of the AMS},
+  volume={11},
+  html={https://www.ams.org/journals/proc/2024-152-11/S0002-9939-2024-16951-3/}
   arixPrefix = {arXiv},
 	arxiv={2305.11150},
 }
@@ -45,8 +47,11 @@ bibtex_show={true},
 bibtex_show={true},
   title={On the distribution of heat in fibered magnetic fields},
   author={Drivas, Theodore D. and Ginsberg, Daniel and Hezekiah Grayer II},
-  journal={To appear, Communications in Mathematical Physics},
-  year={2022},
+  journal={Communications in Mathematical Physics},
+  year={2024},
+  volume={405},
+  number={57},
+  html={https://link.springer.com/article/10.1007/s00220-023-04886-4},
     arxivPrefix = {arXiv},
 	arxiv={2210.09968},
 }
