typo in papers.bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -37,7 +37,7 @@ bibtex_show={true},
   year={2024},
   journal={Proceedings of the AMS},
   volume={11},
-  html={https://www.ams.org/journals/proc/2024-152-11/S0002-9939-2024-16951-3/}
+  html={https://www.ams.org/journals/proc/2024-152-11/S0002-9939-2024-16951-3/},
   arixPrefix = {arXiv},
 	arxiv={2305.11150},
 }
