added fragility paper to bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,16 @@
 ---
 @string{aps = {American Physical Society,}}
 
+@article{drivasginsbergnualart25}
+  bibtex_show={true},
+  title={},
+  author={Drivas, Theo and Ginsberg, Daniel and Nualart, Marc},
+  year={2025},
+  journal={Preprint},
+  arxiv={2410.21765},
+}
+
+
 @article{abeginsbergjeong24,
   bibtex_show={true},
   title={Stationary self-similar profiles for the two-dimensional inviscid Boussinesq equations},
