corrected typo in papers.bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 @string{aps = {American Physical Society,}}
 
-@article{drivasginsbergnualart25}
+@article{drivasginsbergnualart25
   bibtex_show={true},
   title={},
   author={Drivas, Theo and Ginsberg, Daniel and Nualart, Marc},
